gaps are almost all gone! (video still has a minor gap, but easy to fix later)

--- a/Template/css/style.css
+++ b/Template/css/style.css
@@ -278,19 +278,18 @@ a {
 #protest-img, #hateful, #strike, #oil{
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
+    height: 135px;
+    padding-left: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
 
-    height: 148px;
-    padding: 10px;
 }
 
-#protest-img{
-    padding-left: 22px;
-}
+
+
 #first-footer {
-    height: 150px;
+    height: 145px;
     background-color: #AF000E;
-    width: 100%;
-    position: relative;
 }
 
 #disinvited-speakers-text {
@@ -373,4 +372,13 @@ a {
     background-color: rgba(134, 142, 150, 0.79);
     text-align: center;
     padding-top: 10px;
+}
+
+#speaker-title {
+    text-align: center;
+    padding-top: 20px;
+}
+
+.y-axis{
+    font-family: 'Abril Fatface', sans-serif;
 }
